[tool.poetry]
name = "langgraph-course"
version = "0.1.0"
description = ""
authors = ["tada20001 <tada20001@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11, <4.0"
langchain = "^0.3.26"
langgraph = "^0.5.3"
langchain-openai = "^0.3.28"
langchain-tavily = "^0.2.10"
python-dotenv = "^1.1.1"
black = "^25.1.0"
isort = "^6.0.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"